Fixed About Spacing

--- a/css/main.css
+++ b/css/main.css
@@ -314,6 +314,10 @@ h3{
     font-weight: 300;
     font-size: 0.4em;
 }
+#aboutHook {
+    width: 50%;
+    margin-top: 20px;
+}
 
 /* ==========================================================================
    Contact
@@ -543,6 +547,10 @@ input:-webkit-autofill {
     }
     #hook {
         max-width: none;
+    }
+    #aboutHook {
+        width: 100%;
+        margin-top: 20px;
     }
 
 @media screen and (max-width: 980px) {
